--- a/app.json
+++ b/app.json
@@ -22,14 +22,14 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.aythenprueba.newspace2"
+      "package": "com.aythen.newspace2"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "extra": {
       "eas": {
-        "projectId": "8a678d6a-ea72-4997-bbef-c2d679673652"
+        "projectId": "016bcb74-17c5-4928-aaaf-0edc8010253c"
       }
     }
   }
